--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <div class="card">
   <h1>Calculadora de Prepagos</h1>
 
-  <label>📅 Fecha de alta</label>
+  <label>📅 Fecha de Verificación</label>
   <input type="date" id="fecha">
 
   <label>💳 Medio de pago</label>
