--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
       bottom: 130%;
       left: 0;
       background: #ffffff;
-      color: #ABC94A;
+      color: #3C3C3C;
       padding: 10px 12px;
       border-radius: 10px;
-      font-size: 10px;
+      font-size: 11px;
       width: 240px;
       box-shadow: 0 6px 20px rgba(0,0,0,.15);
       transition: opacity 0.5s ease;
@@ -152,7 +152,7 @@
 <body>
 
 <div class="card">
-  <h1>Calculadora de Prepagos</h1>
+  <h1>CALCULADORA DE ACTIVACIÓN DE PREPAGOS</h1>
 
 <label>
   📅 Fecha de alta
