--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       margin-bottom: 14px;
     }
     .subtitle {
-      font-size: 14px;
+      font-size: 16px;
       font-weight: 400;
-      color: #005E5C;
+      color: #3D57C7;
       margin-top: -6px;
       margin-bottom: 16px;
       line-height: 1.4;
