--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
       font-size: 20px;
       font-weight: 700;
       color: #3D57C7;
-      margin-bottom: 14px;
+      margin-bottom: 7px;
+      text-align: center;
     }
     .subtitle {
       font-size: 16px;
       font-weight: 400;
       color: #3D57C7;
-      margin-top: -6px;
-      margin-bottom: 16px;
+      margin-top: -3px;
+      margin-bottom: 18px;
+      text-align: center;
       line-height: 1.4;
     }
 
