--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@ function calcular() {
     if (medio === "tarjeta") {
     mensaje =
       `La cobertura se activa el ${fechaAlta.toLocaleDateString()}. ` +
-      `El monto proporcional es de $${proporcional}. El débito se enviará antes del día 20 del mes en curso y se abonará al vencimiento del resumen de la tarjeta.`;
+      `El débito se enviará antes del día 20 del mes en curso y se abonará al vencimiento del resumen de la tarjeta.`;
     } else {
       mensaje =
         `La cobertura se activa el ${fechaAlta.toLocaleDateString()}. ` +
-        `El monto proporcional es de $${proporcional} y se debitará junto con la cuota total del mes siguiente.`;
+        `El monto proporcional se debitará junto con la cuota total el mes siguiente.`;
     }
   }
 
