--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   <select id="medio">
     <option value="">Seleccionar</option>
     <option value="tarjeta">Tarjeta de crédito</option>
-    <option value="cbu">Débito CBU</option>
+    <option value="cbu">CBU</option>
   </select>
 
   <label>💰 Cuota mensual
